[package]
name = "Git_Forest"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0.229", default-features = false, features = ["derive"] }
serde_json = "1.0.151"
rustls = { version = "0.23", features = ["ring"] }
octocrab = {version="0.54.0", features = ["rustls", "jwt-rust-crypto"]}
tokio = { version = "1.53.1", features = ["rt-multi-thread"] }

